--- a/.env
+++ b/.env
@@ -3,4 +3,11 @@ DB_TEST_NAME=testdb
 DB_TEST_USER=testuser
 DB_TEST_PASSWORD=testpass
 
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=billing
+DB_USER=user123
+DB_PASSWORD=passwd123
+
+APP_PORT=8080
 MISSED_PAYMENT_MAX=2
